--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,6 +21,14 @@ jobs:
           # gmake will be located at /opt/homebrew/bin/gmake
           echo "✅ GNU Make installed at $(which gmake)"
 
+      # 【新增步骤】安装 Java 8 (JDK 8)
+      - name: Install JDK 8
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin' # 推荐使用 Eclipse Temurin 发行版
+          java-version: '8'
+          cache: 'maven' # 如果构建使用 Maven，可以缓存依赖
+
       - name: Build iOS ipa/tipa package
         shell: bash
         run: |
